--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Peoples.Dal-20201119085023.mdf;Initial Catalog=aspnet-Peoples.Dal-20201119085023;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(local);Initial Catalog=vantonder;Integrated security=True;Trusted_Connection=True;MultipleActiveResultSets=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
