--- a/.github/workflows/master_vantonderdal.yml
+++ b/.github/workflows/master_vantonderdal.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: 'windows-latest'
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
     steps:
     - uses: actions/checkout@master
