--- a/Peoples.Dal.csproj
+++ b/Peoples.Dal.csproj
@@ -186,19 +186,23 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\LoginController.cs" />
+    <Compile Include="Controllers\Api\PopiMetadataController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202011190804310_Initial.cs" />
-    <Compile Include="Migrations\202011190804310_Initial.Designer.cs">
-      <DependentUpon>202011190804310_Initial.cs</DependentUpon>
+    <Compile Include="Helpers\PopiMetadataHelper.cs" />
+    <Compile Include="Migrations\202011192309028_Initial.cs" />
+    <Compile Include="Migrations\202011192309028_Initial.Designer.cs">
+      <DependentUpon>202011192309028_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\PopiMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -276,8 +280,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202011190804310_Initial.resx">
-      <DependentUpon>202011190804310_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202011192309028_Initial.resx">
+      <DependentUpon>202011192309028_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
