--- a/Peoples.Dal.csproj
+++ b/Peoples.Dal.csproj
@@ -178,6 +178,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -193,15 +194,21 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\PopiMetadataHelper.cs" />
-    <Compile Include="Migrations\202011192309028_Initial.cs" />
-    <Compile Include="Migrations\202011192309028_Initial.Designer.cs">
-      <DependentUpon>202011192309028_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\202011202145025_Initial.cs" />
+    <Compile Include="Migrations\202011202145025_Initial.Designer.cs">
+      <DependentUpon>202011202145025_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ModelConfigurations\IdentificationNumberConfig.cs" />
+    <Compile Include="ModelConfigurations\IdentificationNumberPopiMetadaMapConfig.cs" />
+    <Compile Include="ModelConfigurations\PopMetadataConfig.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CallResult.cs" />
+    <Compile Include="Models\IdentificationNumberPopiMetadataMap.cs" />
+    <Compile Include="Models\IdentificationNumberViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\IdNumber.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\PopiMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -280,8 +287,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202011192309028_Initial.resx">
-      <DependentUpon>202011192309028_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202011202145025_Initial.resx">
+      <DependentUpon>202011202145025_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
