--- a/Peoples.Dal.csproj
+++ b/Peoples.Dal.csproj
@@ -45,10 +45,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClosedXML, Version=0.95.3.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>packages\ClosedXML.0.95.3\lib\net46\ClosedXML.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.7.2.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17">
+      <HintPath>packages\DocumentFormat.OpenXml.2.7.2\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ExcelNumberFormat, Version=1.0.10.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca">
+      <HintPath>packages\ExcelNumberFormat.1.0.10\lib\net20\ExcelNumberFormat.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.FileSystem.Primitives, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>packages\System.IO.FileSystem.Primitives.4.0.1\lib\net46\System.IO.FileSystem.Primitives.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.IO.Packaging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>packages\System.IO.Packaging.4.0.0\lib\net46\System.IO.Packaging.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -114,6 +136,7 @@
       <Private>True</Private>
       <HintPath>packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -178,7 +201,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Controllers\Api\UploadController.cs" />
+    <Compile Include="Dtos\DataStoreDto.cs" />
+    <Compile Include="Dtos\DataSourceData.cs" />
+    <Compile Include="Enums\Enums.cs" />
+    <Compile Include="Helpers\FileProcessingHelper.cs" />
+    <Compile Include="Migrations\202011220234241_Initial.cs" />
+    <Compile Include="Migrations\202011220234241_Initial.Designer.cs">
+      <DependentUpon>202011220234241_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PopiDbContext.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -187,29 +219,24 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\LoginController.cs" />
-    <Compile Include="Controllers\Api\PopiMetadataController.cs" />
+    <Compile Include="Controllers\Api\DataStoreController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\PopiMetadataHelper.cs" />
-    <Compile Include="Migrations\202011202145025_Initial.cs" />
-    <Compile Include="Migrations\202011202145025_Initial.Designer.cs">
-      <DependentUpon>202011202145025_Initial.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Helpers\DataStoreHelper.cs" />
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="ModelConfigurations\IdentificationNumberConfig.cs" />
-    <Compile Include="ModelConfigurations\IdentificationNumberPopiMetadaMapConfig.cs" />
-    <Compile Include="ModelConfigurations\PopMetadataConfig.cs" />
+    <Compile Include="ModelConfigurations\DataStoreConfig.cs" />
+    <Compile Include="ModelConfigurations\FieldConfig.cs" />
+    <Compile Include="ModelConfigurations\TableTabConfig.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CallResult.cs" />
-    <Compile Include="Models\IdentificationNumberPopiMetadataMap.cs" />
-    <Compile Include="Models\IdentificationNumberViewModel.cs" />
+    <Compile Include="Models\DataStore.cs" />
+    <Compile Include="Models\Field.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\IdNumber.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\PopiMetadata.cs" />
+    <Compile Include="Models\TableTab.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -287,8 +314,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202011202145025_Initial.resx">
-      <DependentUpon>202011202145025_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202011220234241_Initial.resx">
+      <DependentUpon>202011220234241_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
