--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="ClosedXML" version="0.95.3" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
