--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
+    <!-- Connectionstring below replaced in Azure with production connectionstring -->
     <add name="DefaultConnection" connectionString="Data Source=(local);Initial Catalog=Popi;Integrated security=True;Trusted_Connection=True;MultipleActiveResultSets=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
